--- a/christmas-shop/sass/base/_common.scss
+++ b/christmas-shop/sass/base/_common.scss
@@ -8,7 +8,7 @@ html {
 }
 body {
 	background-color: $white;
-	width: 100%;
+	overflow: hidden;
 }
 ul {
 	list-style: none;
