--- a/christmas-shop/sass/layout/_header.scss
+++ b/christmas-shop/sass/layout/_header.scss
@@ -21,7 +21,6 @@
 		& a {
 			@include action-small;
 			display: block;
-			height: 100%;
 			width: auto;
 			padding: 12px 20px;
 			@include transition5;
